fix spacing causing weird horizontal scroll

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  min-height: 100vh;
+  max-width: 100%;
   overflow: hidden;
 }
 
